# fastpaip-app

./: .gitignore  README.md  compose.yaml  dockerfile  pyproject.toml
.github/workflows/: ci.yml
src/fastpaip_app/: __init__.py  main.py
src/fastpaip_app/application/: app.py  main.py
src/fastpaip_app/classifications/application/: classification_service.py  services.py
src/fastpaip_app/classifications/domain/: models.py  services.py
src/fastpaip_app/classifications/infrastructure/: gateways.py  repositories.py
src/fastpaip_app/config/: settings.py
