[project]
name = "fastpaip-app"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "plummy",
    "core",
    "fastpaip-local",
    "pydantic-settings>=2.11.0",
    "openai>=2.6.1",
]

[tool.uv.sources]
plummy = { workspace = true }
core = { workspace = true }
fastpaip_local = { workspace = true }

[tool.uv.workspace]
members = ["packages/*"]

[project.scripts]
fastpaip-app = "fastpaip_app:main"
fastpaip-local = "fastpaip_local.application.app:main"
plummy = "plummy:main"

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"
